# QIRO

./: .gitignore  CMakeLists.txt  DesignDoc.md  README.md
examples/: README.md  jit_mod_exp.mlir  qft.mlir  qft_llvm.ll  qft_res.mlir  shor.mlir
include/: CMakeLists.txt  InliningUtils.h  Passes.h  QuantDialect.h  QuantDialect.td  QuantOps.td  QuantumDialect.h  QuantumDialect.td  QuantumInterfaces.td  QuantumOps.td  QuantumSSADialect.h  QuantumSSADialect.td  QuantumSSAOps.td  readme.md
lib/: CMakeLists.txt
lib/IR/: CMakeLists.txt  QuantDialect.cpp  QuantumDialect.cpp  QuantumSSADialect.cpp  readme.md
lib/Transforms/: CMakeLists.txt  CircuitInliner.cpp  PassDetail.h  QuantumTransforms.cpp  README.md  ResourceEstimation.cpp
lib/Transforms/utils/: CMakeLists.txt  InliningUtils.cpp
quant-opt/: CMakeLists.txt  quant-opt.cpp
quantum-opt/: CMakeLists.txt  README.md  quantum-opt.cpp
run-jit/: CMakeLists.txt  README.md  run-jit.cpp
run-jit/lib/: printlib.cpp
test/: README.md  adjointCancel.mlir  circuitCancel.mlir  constFolding.mlir  memtoval.mlir  regAccConsolidation.mlir  test.mlir  testssa.mlir
